--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,8 +1,8 @@
-Django==1.8.4
-Pillow==2.9.0
-coverage==3.7.1
-django-modeltranslation==0.10
+Django==1.8.5
+Pillow==3.0.0
+coverage==4.0
+django-modeltranslation==0.10.1
 django-redis==4.2.0
 mysql-python==1.2.5
-pytz
+pytz==2015.6
 simplejson==3.8.0
